--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -21,7 +21,7 @@ header:after {
   align-items: center;
   display: inline-flex;
   height: $header-height;
-  color: $header-text-color;
+  color: $color-primary;
 }
 
 
